fix: bad contrast on colors

--- a/src/Resources/Effect.css
+++ b/src/Resources/Effect.css
@@ -40,5 +40,5 @@
 
 .effect.Game{
     background-color: #FED23B;
-    color: white;
+    color: black;
 }
